# VIOProject

./: CMakeLists.txt  README.md
backend/: CMakeLists.txt  backend.h  edge.cpp  edge.h  eigen_types.h  problem.cpp  problem.h  vertex.cpp  vertex.h
config/: euroc_config.yaml
include/: System.h  estimator.h  feature_manager.h  feature_tracker.h  feature_tracker_parameters.h  parameters.h
include/backend/: backend.h  edge.h  edge_imu.h  edge_prior.h  edge_reprojection.h  eigen_types.h  imu_integration.h  loss_function.h  problem.h  vertex.h  vertex_inverse_depth.h  vertex_point_xyz.h  vertex_pose.h  vertex_speedbias.h
include/camodocal/camera_models/: Camera.h
include/camodocal/chessboard/: Chessboard.h  ChessboardCorner.h  ChessboardQuad.h  Spline.h
include/factor/: intergration_base.h
include/initial/: initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
include/utility/: tic_toc.h  utility.h
src/: CMakeLists.txt  System.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  parameters.cpp
src/backend/: edge.cpp  edge_imu.cpp  edge_prior.cpp  edge_reprojection.cpp  imu_integration.cpp  loss_function.cpp  vertex.cpp  vertex_pose.cpp
src/camera_models/chessboard/: Chessboard.cpp
src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
src/utility/: utility.cpp
test/: CurveFitting.cpp  run_euroc.cpp
utils/: tic_toc.h
